--- a/python/requirements.lock.txt
+++ b/python/requirements.lock.txt
@@ -3,6 +3,7 @@ antlr4-tools==0.2.2
 black==25.1.0
 click==8.2.1
 flake8==7.2.0
+iniconfig==2.1.0
 install-jdk==1.1.0
 mccabe==0.7.0
 mypy_extensions==1.1.0
@@ -10,7 +11,11 @@ nodeenv==1.9.1
 packaging==25.0
 pathspec==0.12.1
 platformdirs==4.3.8
+pluggy==1.6.0
 pycodestyle==2.13.0
 pyflakes==3.3.2
+Pygments==2.19.2
 pyright==1.1.400
+pytest==8.4.1
+PyYAML==6.0.2
 typing_extensions==4.14.1
