chore: Fix issues with workflow

--- a/.github/workflows/ci_check.yml
+++ b/.github/workflows/ci_check.yml
@@ -35,4 +35,4 @@ jobs:
         uses: ./.github/actions/python-setup
 
       - name: Test with pytest
-        run: make pytest
+        run: make test_python
