--- a/test-oracle/cases.yml
+++ b/test-oracle/cases.yml
@@ -1,4 +1,4 @@
-# Fablex Test Cases
+# Evalis Test Cases
 # -----------------
 # These test cases are shared across all languages to ensure
 # consistent implementations.
