--- a/test-oracle/cases.yml
+++ b/test-oracle/cases.yml
@@ -91,8 +91,14 @@
           city: SF
   expected: ["NYC", "SF"]
 
-# Array indexing inside list comprehension
 - expr: "[item[0] for item in matrix]"
   context:
     matrix: [[1, 2], [3, 4], [5, 6]]
   expected: [1, 3, 5]
+# TODO: We need this test to pass
+# - expr: '[message + " " + (x) for x in items]'
+#   context:
+#     a: 100,
+#     items: [1, 2, 3]
+#     message: "Hello"
+#   expected: ["Hello 100", "Hello 200", "Hello 300"]
