fixup! feat: Add version bump scripts

--- a/.github/actions/python-setup/action.yml
+++ b/.github/actions/python-setup/action.yml
@@ -42,10 +42,10 @@ runs:
 
     - name: Install dependencies (bash)
       if: runner.os != 'Windows'
-      run: make setup_python build_python
+      run: make python_setup pyhton_build
       shell: bash
 
     - name: Install dependencies (Windows)
       if: runner.os == 'Windows'
-      run: make setup_python build_python
+      run: make python_setup python_build
       shell: powershell
