--- a/.github/workflows/ci_check.yml
+++ b/.github/workflows/ci_check.yml
@@ -23,18 +23,24 @@ jobs:
       - name: Check Versions
         run: make check_version
 
-  lint_python:
+  lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
       - name: Python Setup
         uses: ./.github/actions/python-setup
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          registry-url: "https://registry.npmjs.org"
 
       - name: Lint
-        run: make lint_python
+        run: make lint
 
-  test_python:
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -42,5 +48,11 @@ jobs:
       - name: Python Setup
         uses: ./.github/actions/python-setup
 
-      - name: Test with pytest
-        run: make test_python
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          registry-url: "https://registry.npmjs.org"
+
+      - name: Test
+        run: make test
