--- a/.github/workflows/bump_version.yml
+++ b/.github/workflows/bump_version.yml
@@ -4,14 +4,14 @@ on:
   workflow_dispatch:
     inputs:
       subdir:
-        description: "Language implementation to bump"
+        description: 'Language implementation to bump'
         required: true
         type: choice
         options:
           - typescript
           - python
       bump_type:
-        description: "Type of version bump"
+        description: 'Type of version bump'
         required: true
         type: choice
         options:
@@ -32,6 +32,26 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      - name: Check CI Status on Main
+        run: |
+          # Get the latest commit on main
+          MAIN_SHA=$(git rev-parse origin/main)
+          echo "Latest commit on main: $MAIN_SHA"
+
+          # Check if CI passed (using GitHub API)
+          STATUS=$(gh api repos/${{ github.repository }}/commits/$MAIN_SHA/status --jq '.state')
+          echo "CI status: $STATUS"
+
+          if [ "$STATUS" != "success" ]; then
+            echo "❌ ERROR: CI has not passed on main branch"
+            echo "Current status: $STATUS"
+            exit 1
+          fi
+
+          echo "✅ CI passed on main"
+        env:
+          GH_TOKEN: ${{ github.token }}
 
       - name: Setup Git
         run: |
