--- a/typescript/package.json
+++ b/typescript/package.json
@@ -1,6 +1,6 @@
 {
   "name": "evalis",
-  "version": "0.1.0",
+  "version": "0.1.1-dev",
   "description": "A polyglot, secure, user-friendly expression evaluator",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
