--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ node_modules/
 
 # Generated stuff -------------------------------------------------------------
 python/src/evalis/__gen__/
+
 typescript/src/__gen__/
 typescript/dist
+
+*/LICENSE
 
