--- a/typescript/package.json
+++ b/typescript/package.json
@@ -4,12 +4,18 @@
   "description": "A polyglot, secure, user-friendly expression evaluator",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist/**/*",
+    "README.md",
+    "LICENSE"
+  ],
   "scripts": {
-    "build": "tsc",
+    "build:tsc": "tsc",
     "test": "jest",
     "lint": "eslint src tests --ext .ts",
     "format": "prettier --write 'src/**/*.ts' 'tests/**/*.ts'",
-    "format:check": "prettier --check 'src/**/*.ts' 'tests/**/*.ts'"
+    "format:check": "prettier --check 'src/**/*.ts' 'tests/**/*.ts'",
+    "prepack": "make prepack"
   },
   "keywords": [
     "expression",
@@ -17,7 +23,7 @@
     "parser",
     "antlr"
   ],
-  "author": "",
+  "author": "souldzin",
   "license": "MIT",
   "devDependencies": {
     "@eslint/js": "9.39.2",
