ci: Fix tag_version with git config

--- a/.github/workflows/tag_version.yml
+++ b/.github/workflows/tag_version.yml
@@ -24,6 +24,11 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Setup Git
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
       - name: Verify commit is on main
         run: |
           CURRENT_SHA="${{ github.sha }}"
