--- a/.github/workflows/deploy_typescript.yml
+++ b/.github/workflows/deploy_typescript.yml
@@ -4,6 +4,12 @@ on:
   push:
     tags:
       - "typescript_v*"
+  workflow_dispatch:
+    inputs:
+      tag:
+        description: "Tag to deploy (e.g., typescript_v0.1.0)"
+        required: true
+        type: string
 
 permissions:
   contents: read
@@ -13,14 +19,23 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       version: ${{ steps.parse.outputs.version }}
+      tag: ${{ steps.parse.outputs.tag }}
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event_name == 'workflow_dispatch' && inputs.tag || github.ref }}
 
       - name: Parse Version from Tag
         id: parse
         run: |
-          TAG_NAME="${{ github.ref_name }}"
-          echo "Tag: $TAG_NAME"
+          # Determine tag name based on trigger type
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            TAG_NAME="${{ inputs.tag }}"
+            echo "Manual trigger with tag: $TAG_NAME"
+          else
+            TAG_NAME="${{ github.ref_name }}"
+            echo "Tag push trigger: $TAG_NAME"
+          fi
 
           # Extract version from tag (format: typescript_vX.Y.Z)
           # Dev versions are never tagged, so we don't need to handle them
@@ -33,6 +48,7 @@ jobs:
           VERSION="${BASH_REMATCH[1]}"
           echo "Parsed version: $VERSION"
           echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "tag=$TAG_NAME" >> $GITHUB_OUTPUT
 
       - name: Verify Version Matches Package
         run: |
@@ -83,7 +99,7 @@ jobs:
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "- **Package**: evalis" >> $GITHUB_STEP_SUMMARY
           echo "- **Version**: $VERSION" >> $GITHUB_STEP_SUMMARY
-          echo "- **Tag**: ${{ github.ref_name }}" >> $GITHUB_STEP_SUMMARY
+          echo "- **Tag**: ${{ steps.parse.outputs.tag }}" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "✅ Package built and uploaded as artifact" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
@@ -127,7 +143,7 @@ jobs:
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "- **Package**: evalis" >> $GITHUB_STEP_SUMMARY
           echo "- **Version**: $VERSION" >> $GITHUB_STEP_SUMMARY
-          echo "- **Tag**: ${{ github.ref_name }}" >> $GITHUB_STEP_SUMMARY
+          echo "- **Tag**: ${{ needs.pack.outputs.tag }}" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "✅ Successfully published to npm!" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
