--- a/.github/actions/node-setup/action.yml
+++ b/.github/actions/node-setup/action.yml
@@ -6,6 +6,7 @@ runs:
     - uses: actions/setup-node@v4
       with:
         node-version: 22.14.0
+        registry-url: "https://registry.npmjs.org"
         cache: "npm"
         cache-dependency-path: "typescript/package-lock.json"
 
