--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ node_modules/
 
 # Generated stuff -------------------------------------------------------------
 python/src/evalis/__gen__/
+python/dist
 
 typescript/src/__gen__/
 typescript/dist
