--- a/.github/workflows/deploy_python.yml
+++ b/.github/workflows/deploy_python.yml
@@ -111,6 +111,9 @@ jobs:
     environment:
       name: pypi
       url: https://pypi.org/project/evalis
+    permissions:
+      id-token: write  # Required for OIDC/Trusted Publisher authentication
+      contents: read
     steps:
       - uses: actions/checkout@v4
 
