--- a/typescript/package.json
+++ b/typescript/package.json
@@ -1,6 +1,6 @@
 {
   "name": "evalis",
-  "version": "0.1.4-dev",
+  "version": "0.2.0",
   "description": "A polyglot, secure, user-friendly expression evaluator",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
