feat: Improve add operator type coercion and error consistency
- We now are a bit smart with how we handle `+` in our test cases
- The test cases also support handling errors now

--- a/test-oracle/cases.yml
+++ b/test-oracle/cases.yml
@@ -118,3 +118,21 @@
     items: [1, 2, 3]
     message: "Hello"
   expected: ["Hello 100", "Hello 200", "Hello 300"]
+
+- expr: false + "abc"
+  context: {}
+  expected: "falseabc"
+
+- expr: 0 + "abc"
+  context: {}
+  expected: "0abc"
+
+- expr: val + "abc"
+  context:
+    val: [1, 2, 3]
+  expected_error: "Cannot use \\+ operator with types"
+
+- expr: val + val
+  context:
+    val: [1, 2, 3]
+  expected: [1, 2, 3, 1, 2, 3]
