--- a/test-oracle/cases.yml
+++ b/test-oracle/cases.yml
@@ -136,3 +136,39 @@
   context:
     val: [1, 2, 3]
   expected: [1, 2, 3, 1, 2, 3]
+
+# Boolean to string coercion
+- expr: true + " test"
+  context: {}
+  expected: "true test"
+
+# Null handling
+- expr: null + null
+  context: {}
+  expected: null
+
+- expr: null + "test"
+  context: {}
+  expected: "test"
+
+- expr: '"test" + null'
+  context: {}
+  expected: "test"
+
+# Dict/object + string should error
+- expr: obj + "test"
+  context:
+    obj:
+      foo: "bar"
+  expected_error: "Cannot use \\+ operator with types"
+
+# String + array (reverse order, should also error)
+- expr: '"test" + arr'
+  context:
+    arr: [1, 2, 3]
+  expected_error: "Cannot use \\+ operator with types"
+
+# Syntax error (tests parseAst error handling)
+- expr: "1 +"
+  context: {}
+  expected_error: "Syntax errors"
